spinnaker/reccommendation-serivce-deploymenet-v2.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: recommendation-service
  name: recommendation-service-deployment-v2
  namespace: '${parameters.namespace}'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-service
  template:
    metadata:
      labels:
        app: recommendation-service
        version: v2
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: k8s
          image: dtlabs/recommendation-service:2.0
          imagePullPolicy: Always
          name: recommendation-service
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: '0.25'
              memory: 256Mi
